force-app/main/default/objects/Pricing_Option_Add_on__c/Pricing_Option_Add_on__c.object-meta.xml
<CustomObject>
    <description>Add-On Item Pricing for RA Used Car Vehicle Pricing</description>
    <label>Pricing Option Add on</label>
    <nameField>
        <displayFormat>PRICEADO-{00000000}</displayFormat>
        <label>Pricing Option Add on Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Option Add ons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>