force-app/main/default/objects/Pricing_Option_Add_on__c/fields/Add_on_Name__c.field-meta.xml
<CustomField>
    <fullName>Add_on_Name__c</fullName>
    <label>Add-on Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>