force-app/main/default/objects/Pricing_Option_Add_on__c/fields/Add_on_Price__c.field-meta.xml
<CustomField>
    <fullName>Add_on_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Add-on Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>