force-app/main/default/objects/Pricing_Option_Add_on__c/fields/Purchase_Option__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Option</label>
    <referenceTo>Purchase_Option__c</referenceTo>
    <relationshipLabel>Pricing Option Add ons</relationshipLabel>
    <relationshipName>Pricing_Option_Add_ons</relationshipName>
    <type>Lookup</type>
</CustomField>