force-app/main/default/objects/Pricing_Option_Add_on__c/fields/Vehicle_Stock_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Stock_Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Stock Reservation</label>
    <referenceTo>Vehicle_Stock_Reservation__c</referenceTo>
    <relationshipLabel>Pricing Option Add ons</relationshipLabel>
    <relationshipName>Pricing_Option_Add_ons</relationshipName>
    <type>Lookup</type>
</CustomField>