force-app/main/default/objects/Pricing_Option_Add_on__c/recordTypes/RA_Pricing_Option_Add_on_RT.recordType-meta.xml
<RecordType>
    <fullName>RA_Pricing_Option_Add_on_RT</fullName>
    <active>true</active>
    <label>RA Pricing Option Add on RT</label>
</RecordType>